# ClefTools

./: generate_data.py  pyproject.toml
cleftoolkit/: clean_available_data.py  mine_clef_data.py  mine_openalex_inverted_abstracts.py
cleftoolkit/Classes/: API.py  ActiveLearning.py  Article.py  DataController.py  PubMed.py  Vectorizer.py
cleftoolkit/tools/: mine_openalex_inverted_abstracts.py  mine_pubmed_data.py
data/clef_2017_train/: CD007394.csv  CD007427.csv  CD008054.csv  CD008686.csv  CD008691.csv  CD009020.csv  CD009323.csv  CD009944.csv  CD010438.csv  CD010632.csv  CD010771.csv  CD011134.csv  CD011134_vectorizer.pkl
data/clef_2018_train/: CD007394.csv  CD007427.csv  CD008054.csv  CD008081.csv  CD008686.csv  CD008691.csv  CD008803.csv  CD009020.csv  CD009323.csv  CD009372.csv  CD009551.csv  CD009647.csv  CD009944.csv  CD010386.csv  CD010438.csv  CD010632.csv  CD010633.csv  CD010771.csv  CD011134.csv
data/clef_dta_2019_train/: CD007427.csv  CD007431.csv  CD008760.csv  CD009020.csv  CD009786.csv  CD009944.csv  CD010023.csv  CD010632.csv  CD010657.csv  CD010771.csv  CD010775.csv  CD010864.csv  CD011126.csv  CD011134.csv  CD011420.csv  CD011431.csv  CD011912.csv  CD011926.csv  CD012009.csv
data/clef_int_2019_train/: CD005139.csv  CD005253.csv  CD006715.csv  CD007427.csv  CD007431.csv  CD007868.csv  CD008018.csv  CD008081.csv  CD008122.csv  CD008201.csv  CD008691.csv  CD008759.csv  CD008760.csv  CD008892.csv  CD009020.csv  CD009135.csv  CD009185.csv  CD009372.csv  CD009694.csv  CD009786.csv  CD009944.csv  CD010019.csv  CD010023.csv  CD010355.csv  CD010386.csv  (+23 more)
